# primeval-rs

./: .travis.yml  Cargo.toml  README.md
.github/: build.workflow
benches/: primeval.rs
src/: bin.rs  main.rs  primeval.rs
tests/: primeval.rs
