[package]
name = "primeval"
description = "A monstrosity of a prime number generator"
repository = "https://github.com/ajmwagar/primeval-rs"
version = "0.0.3"
authors = ["Avery Wagar <ajmw.subs@gmail.com>"]
license = "MIT"

[lib]
name = "primeval"
path = "src/primeval.rs"

[[bin]]
name = "primeval"
path = "src/bin.rs"

[dependencies]
